force-app/main/default/objects/EvidenceAccess__c/EvidenceAccess__c.object-meta.xml
<CustomObject>
    <label>EvidenceAccess</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EvidenceAccess Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EvidenceAccess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>