force-app/main/default/objects/EvidenceAccess__c/fields/AccessedAt__c.field-meta.xml
<CustomField>
    <fullName>AccessedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccessedAt</label>
    <type>DateTime</type>
</CustomField>