force-app/main/default/objects/EvidenceAccess__c/fields/AccessedBy__c.field-meta.xml
<CustomField>
    <fullName>AccessedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccessedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EvidenceAccess</relationshipName>
    <type>Lookup</type>
</CustomField>